# remindmail

./: .gitignore  AGENTS.md  LICENSE.md  README.md  TasksGenerateExample.md  client.py  client_utils.py  main.py  requirements.md  secureData.py  secureData.py.save  setup.cfg  tasks.py
.github/workflows/: release.yml
ExampleFiles/: TasksGenerateExample.md  TasksGenerateExample.txt  mealExample.json
src/remind/: __init__.py  __main__.py  build.py  client.py  client_utils.py  error_handler.py  old_remindmail.py  old_remindmail_utils.py  query_manager.py  remind.py  reminder.py  reminder_confirmation.py  reminder_manager.py  reminder_struc.py  remindmail.py  remindmail_utils.py  remix.md  remix.py  remix_utils.py  trello_manager.py  update_checker.py  yaml_manager.py
test/: test.py  test_confirmation.py  test_day_of_month.py  test_every_month_day.py  test_feb29_annual.py  test_update_checker.py  test_when_edge_cases.py
