[metadata]
name = remindmail
version = 2022.11.06.1
author = Tyler Woodfin
author_email = feedback@tyler.cloud
description = Easily schedule reminders to be emailed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/remindmail
project_urls =
Bug Tracker = https://github.com/tylerjwoodfin/remindmail/issues
py_modules=["remind"]
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    remind = remind.remind:main