[metadata]
name = remindmail
version = 2023.07.09.3
author = Tyler Woodfin
author_email = feedback@tyler.cloud
description = Easily schedule reminders to be emailed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/remindmail
project_urls =
bug tracker = https://github.com/tylerjwoodfin/remindmail/issues
py_modules=["remind"]
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    remind=remind.__main__:main