[metadata]
name = remindmail
version = 1!3.1.1
author = Tyler Woodfin
author_email = feedback-remindmail@tylerwoodfin.com
description = Easily schedule reminders to be emailed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/remindmail
project_urls =
bug tracker = https://github.com/tylerjwoodfin/remindmail/issues
py_modules=["remind"]
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
install_requires =
    cabinet>=0.1.0
    rich>=10.0.0
    prompt_toolkit>=3.0.0
    python-dateutil>=2.8.0
    PyYAML>=6.0.0
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    remind=remind.__main__:main
